# SimpleProjectGenerator

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/py_project_generator/: program.py
src/simple_project_generator/: about.py  desktop.py  program.py
src/simple_project_generator/modules/: project_generator.py
