[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_project_generator"
version = "0.1.3"
description = "my pypi project generator"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["writing", "translate"]
dependencies = [
    "PyQt5"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/SimpleProjectGenerator/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/SimpleProjectGenerator/tree/main/doc"
"Source" = "https://github.com/trucomanx/SimpleProjectGenerator"

[project.scripts]
"simple-project-generator" = "simple_project_generator.program:main"

[tool.setuptools]
packages = ["simple_project_generator", "simple_project_generator.modules"]

[tool.setuptools.package-data]
"simple_project_generator" = ["icons/logo.png", "data/pyqt5_project_template_1.zip"]
